h2 heading font size

--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -50,6 +50,9 @@
         width: 80% !important;
         margin: 0 auto !important;
     }
+    h2.notion-heading{
+        font-size: 3.5rem !important;
+    }
     .notion-heading{
         width: 80% !important;
         margin: 1.5rem auto !important;
