--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -104,6 +104,24 @@
             width: 100% !important;
         }
 
+        .notion-collection-gallery{
+        width: 100% !important;
+        }
+
+        .notion-bulleted-list{
+            width: 100% !important;
+        }
+
+        .notion-code pre{
+            width: 100% !important;
+        }
+
+        .notion-collection-table__wrapper{
+            width: 100% !important;
+        }
+
+        
+
         tbody.notion-collection-table__body {
             flex-direction: column !important;
         }
