--- a/style/main.css
+++ b/style/main.css
@@ -818,6 +818,9 @@ html ::-webkit-scrollbar-thumb {
   margin: 0 auto !important;
   gap: 3rem !important;
 }
+.notion-callout.bg-orange-light .notion-callout__content .notion-column-list {
+  align-items: flex-start !important;
+}
 .notion-callout.bg-orange-light .notion-callout__content .notion-image {
   max-width: 180px !important;
   padding: 5px 16px !important;
