h2 in index pages

--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -50,9 +50,6 @@
         width: 80% !important;
         margin: 0 auto !important;
     }
-    h2.notion-heading{
-        font-size: 3.5rem !important;
-    }
     .notion-heading{
         width: 80% !important;
         margin: 1.5rem auto !important;
@@ -93,6 +90,12 @@
     
 }
 
+@media screen and (max-width:1480px){
+     h2.notion-heading{
+        font-size: var(--font-size-3) !important;
+    }
+}
+
 @media screen and (max-width:1150px){
     .parent-page__index {
 
@@ -101,6 +104,7 @@
             margin: 0 auto !important;
         }
         .notion-heading{
+            max-width: 100% !important;
             width: 100% !important;
         }
 
