--- a/style/main.css
+++ b/style/main.css
@@ -439,9 +439,6 @@ p, p.notion-text__content {
   width: 80% !important;
   margin: 0 auto !important;
 }
-.parent-page__index h2.notion-heading {
-  font-size: 3.5rem !important;
-}
 .parent-page__index .notion-heading {
   width: 80% !important;
   margin: 1.5rem auto !important;
@@ -475,12 +472,18 @@ p, p.notion-text__content {
   margin: 0 auto !important;
 }
 
+@media screen and (max-width: 1480px) {
+  h2.notion-heading {
+    font-size: var(--font-size-3) !important;
+  }
+}
 @media screen and (max-width: 1150px) {
   .parent-page__index .notion-text {
     width: 100% !important;
     margin: 0 auto !important;
   }
   .parent-page__index .notion-heading {
+    max-width: 100% !important;
     width: 100% !important;
   }
   .parent-page__index .notion-collection-gallery {
