--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -64,11 +64,21 @@
     .notion-bulleted-list{
         width: 80% !important;
         margin: 0 auto;
+        font-size: 1.125rem !important;
+        line-height: 1.7 !important;
+        letter-spacing: 0.025rem !important;
+        padding-inline-start: 23px !important;
+        color: var(--color-paragraph-default) !important;
     }
 
     .notion-numbered-list{
         width: 80% !important;
         margin: 0 auto !important;
+        font-size: 1.125rem !important;
+        line-height: 1.7 !important;
+        letter-spacing: 0.025rem !important;
+        padding-inline-start: 23px !important;
+        color: var(--color-paragraph-default) !important;
     }
 
     .notion-code pre{
