--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -87,6 +87,7 @@ h3.notion-heading{
 p, p.notion-text__content{
     font-size: var(--font-size-1) !important;
     color: var(--color-paragarph-default) !important;
+    letter-spacing: 0.025rem !important;
 }
 
 
