--- a/style/main.css
+++ b/style/main.css
@@ -182,6 +182,7 @@ h3.notion-heading {
 p, p.notion-text__content {
   font-size: var(--font-size-1) !important;
   color: var(--color-paragarph-default) !important;
+  letter-spacing: 0.025rem !important;
 }
 
 @media screen and (max-width: 1288px) {
@@ -451,7 +452,7 @@ p, p.notion-text__content {
 .parent-page__index .notion-bulleted-list {
   width: 80% !important;
   margin: 0 auto;
-  font-size: 1.125rem !important;
+  font-size: var(--font-size-1) !important;
   line-height: 1.7 !important;
   letter-spacing: 0.025rem !important;
   padding-inline-start: 23px !important;
@@ -460,7 +461,7 @@ p, p.notion-text__content {
 .parent-page__index .notion-numbered-list {
   width: 80% !important;
   margin: 0 auto !important;
-  font-size: 1.125rem !important;
+  font-size: var(--font-size-1) !important;
   line-height: 1.7 !important;
   letter-spacing: 0.025rem !important;
   padding-inline-start: 23px !important;
