--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -50,6 +50,10 @@
         width: 80% !important;
         margin: 0 auto !important;
     }
+
+    h1.notion-heading{
+        max-width: 100% !important;
+    }
     .notion-heading{
         width: 80% !important;
         margin: 1.5rem auto !important;
@@ -119,7 +123,6 @@
             margin: 0 auto !important;
         }
         .notion-heading{
-            max-width: 100% !important;
             width: 100% !important;
         }
 
