--- a/style/main.css
+++ b/style/main.css
@@ -440,6 +440,9 @@ p, p.notion-text__content {
   width: 80% !important;
   margin: 0 auto !important;
 }
+.parent-page__index h1.notion-heading {
+  max-width: 100% !important;
+}
 .parent-page__index .notion-heading {
   width: 80% !important;
   margin: 1.5rem auto !important;
@@ -498,7 +501,6 @@ p, p.notion-text__content {
     margin: 0 auto !important;
   }
   .parent-page__index .notion-heading {
-    max-width: 100% !important;
     width: 100% !important;
   }
   .parent-page__index .notion-collection-gallery {
