--- a/style/main.css
+++ b/style/main.css
@@ -619,6 +619,7 @@ tbody.notion-collection-table__body {
   justify-content: left !important;
   height: auto !important;
   overflow: unset !important;
+  letter-spacing: 0.025rem !important;
 }
 
 .notion-collection-table td:first-of-type, .notion-collection-table th:first-of-type {
@@ -1031,6 +1032,11 @@ html ::-webkit-scrollbar-thumb {
   width: 45px !important;
   height: 45px !important;
 }
+.notion-callout.bg-green-light .notion-collection-table__body .notion-property__title {
+  letter-spacing: 0.1rem !important;
+  font-size: 1.5rem !important;
+  margin-top: 0.5rem !important;
+}
 
 @media (max-width: 680px) {
   tbody.notion-collection-table__body {
@@ -1128,6 +1134,11 @@ html ::-webkit-scrollbar-thumb {
   .notion-root .notion-text .notion-text__content .notion-semantic-string span strong .notion-link, .notion-text .notion-text__content .notion-semantic-string span .notion-link strong {
     font-size: var(--font-size-0) !important;
   }
+  .notion-callout.bg-green-light .notion-collection-table__body {
+    display: grid !important;
+    grid-template-columns: 1fr 1fr !important;
+    gap: 2rem !important;
+  }
 }
 @media screen and (max-width: 992px) {
   .notion-callout.bg-green-light .notion-column-list {
@@ -1141,5 +1152,9 @@ html ::-webkit-scrollbar-thumb {
   }
   .notion-callout.bg-green-light .notion-column-list .notion-column:last-child {
     display: none !important;
+  }
+  .notion-callout.bg-green-light .notion-collection-table__body {
+    display: grid !important;
+    grid-template-columns: 1fr !important;
   }
 }/*# sourceMappingURL=main.css.map */
