--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -32,6 +32,17 @@
     line-height: 1 !important;
 }
 
+//collection headers
+.notion-collection__header{
+    line-height: 1.25 !important;
+    font-size: var(--font-size-2) !important;
+    opacity: .5 !important;
+    letter-spacing: .1rem !important;
+    margin-top: 1rem !important;
+    margin-bottom: 1.5rem !important;
+    
+}
+
 .notion-collection__header-wrapper{
     justify-content: center !important;
     margin-top: 3rem !important;
