--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -40,7 +40,7 @@
     letter-spacing: .1rem !important;
     margin-top: 1rem !important;
     margin-bottom: 1.5rem !important;
-    
+
 }
 
 .notion-collection__header-wrapper{
@@ -160,9 +160,11 @@ tbody.notion-collection-table__body{
 //Medium gallery
 .notion-collection-gallery{
     gap: 3rem !important;
+    padding-top: 0px !important;
 }
 
 .notion-collection-gallery.medium{
+    border: none !important;
     display: grid !important;
     grid-template-columns: 1fr 1fr !important;
 }
@@ -207,6 +209,7 @@ tbody.notion-collection-table__body{
     font-size: var(--font-size-2) !important;
     font-weight: 600 !important;
     line-height: 1.2 !important;
+    letter-spacing: 0.025rem !important;
 }
 
 .notion-property__date{
@@ -577,9 +580,8 @@ html ::-webkit-scrollbar-thumb {
 
 @media (max-width: 680px) {
     tbody.notion-collection-table__body{
-        margin-top: 4rem !important;
         flex-direction: column !important;
-        gap: 7rem !important;
+        gap: 2rem !important;
     }
 
     .notion-collection-table tr{
@@ -613,6 +615,14 @@ html ::-webkit-scrollbar-thumb {
         grid-template-columns: 1fr !important;
     
         }
+    }
+
+    .notion-callout.bg-gray-light .notion-callout__content .notion-column-list{
+        gap: 2rem !important;
+    }
+
+    .notion-collection-gallery{
+        gap: 2rem !important;
     }
     
 }
