--- a/style/main.css
+++ b/style/main.css
@@ -436,6 +436,9 @@ p, p.notion-text__content {
   background: var(--color-hover-default) !important;
 }
 
+.parent-page__index .notion-property .notion-property__select {
+  display: none !important;
+}
 .parent-page__index .notion-text {
   width: 80% !important;
   margin: 0 auto !important;
