--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -46,7 +46,7 @@
 
 .parent-page__index {
 
-    .notion-property .notion-property__select{
+    .notion-collection-table__cell.select{
         display: none !important;
     }
 
