--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -46,6 +46,16 @@
 
 .parent-page__index {
 
+    .notion-column-list{
+        width: 88% !important;
+        margin: 0 auto !important;
+    }
+
+    .notion-divider{
+        width: 80 !important;
+        margin: 0 auto !important;
+    }
+
     .notion-collection-table__cell.select{
         display: none !important;
     }
@@ -85,7 +95,6 @@
         font-size: var(--font-size-1) !important;
         line-height: 1.7 !important;
         letter-spacing: 0.025rem !important;
-        padding-inline-start: 23px !important;
         color: var(--color-paragraph-default) !important;
     }
 
