--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -52,7 +52,7 @@
     }
 
     .notion-divider{
-        width: 80 !important;
+        width: 80% !important;
         margin: 0 auto !important;
     }
 
