width 100% notion root

--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -46,6 +46,10 @@
 
 .parent-page__index {
 
+    .notion-root{
+        width: 100% !important;
+    }
+
     .notion-column-list{
         width: 88% !important;
         margin: 0 auto !important;
