--- a/style/main.css
+++ b/style/main.css
@@ -436,6 +436,9 @@ p, p.notion-text__content {
   background: var(--color-hover-default) !important;
 }
 
+.parent-page__index .notion-root {
+  width: 100% !important;
+}
 .parent-page__index .notion-column-list {
   width: 88% !important;
   margin: 0 auto !important;
