--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -159,6 +159,10 @@
             width: 100% !important;
         }
 
+        .notion-divider{
+        width: 100% !important;
+        }
+
         .notion-collection-table__wrapper{
             width: 100% !important;
         }
