--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -78,7 +78,7 @@ h3.notion-heading{
     font-weight: 700 !important;
     text-transform: uppercase !important;
     line-height: 1.25 !important;
-    opacity: .5 !important;
+    color: var(--color-paragraph-default) !important;
     letter-spacing: .1rem !important;
     margin-top: 1rem !important;
     margin-bottom: 1.5rem !important;
