--- a/style/main.css
+++ b/style/main.css
@@ -173,7 +173,7 @@ h3.notion-heading {
   font-weight: 700 !important;
   text-transform: uppercase !important;
   line-height: 1.25 !important;
-  opacity: 0.5 !important;
+  color: var(--color-paragraph-default) !important;
   letter-spacing: 0.1rem !important;
   margin-top: 1rem !important;
   margin-bottom: 1.5rem !important;
