--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -1,6 +1,7 @@
 //colors
 .theme-blackout body{
     --color-bg-default: rgb(32, 32, 32) !important;
+    --color-bg-blur-default: rgba(32, 32, 32,0.5) !important;
     --theme-gradient: linear-gradient(to bottom, rgba(32, 32, 32, 0), rgba(32, 32, 32, 1) 98%) !important;
     --color-border-default: hsl(0deg 0% 43% / 20%) !important;
     --color-box-shadow: rgba(0,0,0,.05) 0 10px 20px 0!important;
@@ -19,6 +20,7 @@
 
 .theme-default body{
     --color-bg-default: rgb(237, 237, 237) !important;
+    --color-bg-blur-default: rgba(237, 237, 237,0.5) !important;
     --theme-gradient: linear-gradient(to bottom, rgba(237, 237, 237, 0), rgba(237, 237, 237, 1) 98%)!important;
     --color-border-default: hsla(0, 0%, 62%, 0.3) !important;
     --color-box-shadow: rgba(30,88,255,.05) 0 10px 20px 0!important;
