--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -75,6 +75,11 @@
     display: block !important;
   }
 
+  .super-navbar__menu{
+    background: var(--color-bg-blur-default) !important;
+    backdrop-filter: blur(30px) !important;
+  }
+  
   .super-navbar__menu-close{
     align-items: flex-start !important;
   }
