--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,6 @@
 .theme-blackout body {
   --color-bg-default: rgb(32, 32, 32) !important;
+  --color-bg-blur-default: rgba(32, 32, 32,0.5) !important;
   --theme-gradient: linear-gradient(to bottom, rgba(32, 32, 32, 0), rgba(32, 32, 32, 1) 98%) !important;
   --color-border-default: hsl(0deg 0% 43% / 20%) !important;
   --color-box-shadow: rgba(0,0,0,.05) 0 10px 20px 0!important;
@@ -18,6 +19,7 @@
 
 .theme-default body {
   --color-bg-default: rgb(237, 237, 237) !important;
+  --color-bg-blur-default: rgba(237, 237, 237,0.5) !important;
   --theme-gradient: linear-gradient(to bottom, rgba(237, 237, 237, 0), rgba(237, 237, 237, 1) 98%)!important;
   --color-border-default: hsla(0, 0%, 62%, 0.3) !important;
   --color-box-shadow: rgba(30,88,255,.05) 0 10px 20px 0!important;
@@ -330,6 +332,11 @@ p, p.notion-text__content {
 
 .super-navbar__menu-wrapper.enter-done {
   display: block !important;
+}
+
+.super-navbar__menu {
+  background: var(--color-bg-blur-default) !important;
+  backdrop-filter: blur(30px) !important;
 }
 
 .super-navbar__menu-close {
