--- a/style/main.css
+++ b/style/main.css
@@ -590,16 +590,14 @@ p, p.notion-text__content {
   letter-spacing: 0.1rem !important;
   margin-top: 1rem !important;
   margin-bottom: 1.5rem !important;
+  text-transform: uppercase !important;
+  color: var(--color-paragraph-default) !important;
 }
 
 .notion-collection__header-wrapper {
   justify-content: center !important;
   margin-top: 3rem !important;
   margin-bottom: 2rem !important;
-}
-
-.notion-collection__header {
-  text-transform: uppercase !important;
 }
 
 thead.notion-collection-table__head {
