--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -521,7 +521,7 @@ html ::-webkit-scrollbar-thumb {
 }
 
 .notion-image.normal img{
-    border-radius: 10% !important;
+    border-radius: 10px !important;
 }
 
 .notion-image.page-width img{
