--- a/style/main.css
+++ b/style/main.css
@@ -1026,7 +1026,7 @@ html ::-webkit-scrollbar-thumb {
 }
 
 .notion-image.normal img {
-  border-radius: 10% !important;
+  border-radius: 10px !important;
 }
 
 .notion-image.page-width img {
