--- a/style/main.css
+++ b/style/main.css
@@ -1063,6 +1063,11 @@ html ::-webkit-scrollbar-thumb {
   grid-template-columns: 1fr 1fr 1fr !important;
   gap: 3rem !important;
 }
+.notion-callout.bg-green-light .notion-collection-table__body .notion-collection-table tr:hover {
+  box-shadow: var(--color-box-shadow) !important;
+  border: 1px solid transparent !important;
+  transform: translateY(-2px) !important;
+}
 .notion-callout.bg-green-light .notion-collection-table__body .notion-property.notion-property__file a div {
   width: 45px !important;
   height: 45px !important;
