--- a/style/main.css
+++ b/style/main.css
@@ -1063,11 +1063,6 @@ html ::-webkit-scrollbar-thumb {
   grid-template-columns: 1fr 1fr 1fr !important;
   gap: 3rem !important;
 }
-.notion-callout.bg-green-light .notion-collection-table__body .notion-collection-table tr:hover {
-  box-shadow: var(--color-box-shadow) !important;
-  border: 1px solid transparent !important;
-  transform: translateY(-2px) !important;
-}
 .notion-callout.bg-green-light .notion-collection-table__body .notion-property.notion-property__file a div {
   width: 45px !important;
   height: 45px !important;
@@ -1076,6 +1071,11 @@ html ::-webkit-scrollbar-thumb {
   letter-spacing: 0.1rem !important;
   font-size: 1.5rem !important;
   margin-top: 0.5rem !important;
+}
+.notion-callout.bg-green-light .notion-collection-table tr:hover {
+  box-shadow: var(--color-box-shadow) !important;
+  border: 1px solid transparent !important;
+  transform: translateY(-2px) !important;
 }
 
 @media (max-width: 680px) {
