header cover mask

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -183,7 +183,8 @@ tbody.notion-collection-table__body{
 }
 
 .notion-collection-card:hover{
-    background: var(--color-bg-hover-default) !important;
+    /* background: var(--color-bg-hover-default) !important; */
+    background: pink !important;
 }
 
 .notion-collection-card:hover .notion-collection-card__cover img{
