--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -9,6 +9,7 @@
     max-height: 60vh !important;
     z-index: -2 !important;
     opacity: .5 !important;
+    mask-image: var(--color-mask-default) !important;
 }
 
 .notion-header__cover.no-cover {
