--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,6 @@
 .theme-blackout body {
   --color-bg-default: rgb(32, 32, 32) !important;
+  --color-mask-default: linear-gradient(#20202000, rgba(32, 32, 32, 0)) !important;
   --color-bg-blur-default: rgba(32, 32, 32,0.5) !important;
   --theme-gradient: linear-gradient(to bottom, rgba(32, 32, 32, 0), rgba(32, 32, 32, 1) 98%) !important;
   --color-border-default: hsl(0deg 0% 43% / 20%) !important;
@@ -9,16 +10,17 @@
   --color-text-default: hsl(0, 0%, 93%) !important;
   --color-date-default: rgb(152, 144, 144) !important;
   --color-link-default: rgb(208, 106, 78) !important;
-  --color-hover-default: linear-gradient(to bottom, rgba(32, 32, 32, 0), rgb(208 106 78 / 10%) 98%) !important;
+  --color-hover-default: linear-gradient(to bottom, rgba(32, 32, 32, 0), rgba(208 106 78 / 10%) 98%) !important;
   --color-cta-background: rgb(237, 237, 237) !important;
   --color-cta-text: rgb(32, 32, 32) !important;
-  --color-callout-background:rgb(255 255 255/3%) !important;
-  --color-bg-hover-default:rgb(255 255 255/3%) !important;
+  --color-callout-background:rgba(255 255 255/3%) !important;
+  --color-bg-hover-default:rgba(255 255 255/3%) !important;
   --scrollbar-thumb-color: rgba(110, 110, 110, 0.1) !important;
 }
 
 .theme-default body {
   --color-bg-default: rgb(237, 237, 237) !important;
+  --color-mask-default: linear-gradient(#fff, rgba(257,257,257,0)) !important;
   --color-bg-blur-default: rgba(237, 237, 237,0.5) !important;
   --theme-gradient: linear-gradient(to bottom, rgba(237, 237, 237, 0), rgba(237, 237, 237, 1) 98%)!important;
   --color-border-default: hsla(0, 0%, 62%, 0.3) !important;
@@ -241,6 +243,7 @@ p, p.notion-text__content {
   max-height: 60vh !important;
   z-index: -2 !important;
   opacity: 0.5 !important;
+  mask-image: var(--color-mask-default) !important;
 }
 
 .notion-header__cover.no-cover {
@@ -724,7 +727,8 @@ tbody.notion-collection-table__body {
 }
 
 .notion-collection-card:hover {
-  background: var(--color-bg-hover-default) !important;
+  /* background: var(--color-bg-hover-default) !important; */
+  background: pink !important;
 }
 
 .notion-collection-card:hover .notion-collection-card__cover img {
