--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -6,7 +6,7 @@
     --theme-gradient: linear-gradient(to bottom, rgba(32, 32, 32, 0), rgba(32, 32, 32, 1) 98%) !important;
     --color-border-default: hsl(0deg 0% 43% / 20%) !important;
     --color-box-shadow: rgba(0,0,0,.05) 0 10px 20px 0!important;
-    --color-bg-transparent-default: rgb(255, 255, 255, 0) !important;
+    --color-bg-transparent-default: rgba(255, 255, 255, 0) !important;
     --color-paragraph-default: rgb(193, 193, 193) !important;
     --color-text-default: hsl(0, 0%, 93%) !important;
     --color-date-default: rgb(152, 144, 144) !important;
