--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -525,7 +525,7 @@ html ::-webkit-scrollbar-thumb {
 }
 
 .notion-image.page-width img{
-    border-radius: 10px !important;
+    border-radius: 0.3rem !important;
 }
 
 /* .notion-callout .notion-column-list .notion-image img{
