--- a/style/main.css
+++ b/style/main.css
@@ -1042,7 +1042,7 @@ html ::-webkit-scrollbar-thumb {
 }
 
 .notion-image.page-width img {
-  border-radius: 10px !important;
+  border-radius: 0.3rem !important;
 }
 
 /* .notion-callout .notion-column-list .notion-image img{
