--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -77,6 +77,8 @@
   .super-navbar__menu{
     background: var(--color-bg-blur-default) !important;
     backdrop-filter: blur(30px) !important;
+    -webkit-backdrop-filter: blur(30px) !important;
+    
   }
 
   .super-navbar__menu-close{
@@ -84,60 +86,13 @@
   }
 
 
-//toggle light and dark theme
-.toggle-switch{
-    width: 22px !important;
-    height: 22px !important;
-    transition: all .3s ease-in-out !important;
-    opacity: 0.5 !important;
-    cursor: pointer !important;
-    margin-right: 25px !important;
-    margin-left: -10px !important;
-}
-
-.dark-mode-icon svg, .light-mode-icon svg{
-    height: 22px !important;
-    width: 22px !important;
-}
-
-//theme blackout
-
-.theme-blackout .light-mode-icon svg, .theme-blackout .super-navbar__button svg{
-    fill: var(--color-text-default) !important;
-}
-
-
-.theme-blackout .dark-mode-icon{
-    display: none !important;
-}
-
-.theme-blackout .light-mode-icon{
-    display: flex !important;
-}
-
-.theme-blackout .super-navbar__button{
-    stroke: var(--color-text-default) !important;
-}
 
 
 
-//theme default
 
-.theme-default .dark-mode-icon svg, .theme-default .super-navbar__button svg{
-    fill: var(--color-text-default) !important;
-}
 
-.theme-default .dark-mode-icon{
-    display: flex !important;
-}
 
-.theme-default .light-mode-icon{
-    display: none !important;
-}
 
-.theme-default .super-navbar__button{
-    stroke: var(--color-text-default) !important;
-}
 
 
 @media (max-width: 546px){
