--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -103,6 +103,7 @@
     }
 
     .notion-code pre{
+        background-color: #fff !important;
         width: 80% !important;
         margin: 0 auto !important;
     }
