--- a/style/main.css
+++ b/style/main.css
@@ -339,57 +339,11 @@ p, p.notion-text__content {
 .super-navbar__menu {
   background: var(--color-bg-blur-default) !important;
   backdrop-filter: blur(30px) !important;
+  -webkit-backdrop-filter: blur(30px) !important;
 }
 
 .super-navbar__menu-close {
   align-items: flex-start !important;
-}
-
-.toggle-switch {
-  width: 22px !important;
-  height: 22px !important;
-  transition: all 0.3s ease-in-out !important;
-  opacity: 0.5 !important;
-  cursor: pointer !important;
-  margin-right: 25px !important;
-  margin-left: -10px !important;
-}
-
-.dark-mode-icon svg, .light-mode-icon svg {
-  height: 22px !important;
-  width: 22px !important;
-}
-
-.theme-blackout .light-mode-icon svg, .theme-blackout .super-navbar__button svg {
-  fill: var(--color-text-default) !important;
-}
-
-.theme-blackout .dark-mode-icon {
-  display: none !important;
-}
-
-.theme-blackout .light-mode-icon {
-  display: flex !important;
-}
-
-.theme-blackout .super-navbar__button {
-  stroke: var(--color-text-default) !important;
-}
-
-.theme-default .dark-mode-icon svg, .theme-default .super-navbar__button svg {
-  fill: var(--color-text-default) !important;
-}
-
-.theme-default .dark-mode-icon {
-  display: flex !important;
-}
-
-.theme-default .light-mode-icon {
-  display: none !important;
-}
-
-.theme-default .super-navbar__button {
-  stroke: var(--color-text-default) !important;
 }
 
 @media (max-width: 546px) {
@@ -503,6 +457,7 @@ p, p.notion-text__content {
   color: var(--color-paragraph-default) !important;
 }
 .parent-page__index .notion-code pre {
+  background-color: #fff !important;
   width: 80% !important;
   margin: 0 auto !important;
 }
