status position absolute

--- a/style/main.css
+++ b/style/main.css
@@ -640,6 +640,11 @@ tbody.notion-collection-table__body {
 }
 
 .notion-collection-table td:last-child, .notion-collection-table th:last-child {
+  /*     position: absolute !important;
+      padding: 10px 15px !important; */
+}
+
+td.notion-collection-table__cell.status {
   position: absolute !important;
   padding: 10px 15px !important;
 }
