--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -127,8 +127,13 @@ tbody.notion-collection-table__body{
 }
 
 .notion-collection-table td:last-child, .notion-collection-table th:last-child{
+/*     position: absolute !important;
+    padding: 10px 15px !important; */
+}
+
+td.notion-collection-table__cell.status{
     position: absolute !important;
-    padding: 10px 15px !important;
+    padding: 10px 15px !important; 
 }
 
 .notion-collection-table__head-cell{
