--- a/style/main.css
+++ b/style/main.css
@@ -1096,6 +1096,10 @@ html ::-webkit-scrollbar-thumb {
   display: none;
 }
 
+.super-password-protection {
+  background: var(--color-callout-background) !important;
+}
+
 @media (max-width: 546px) {
   h1.notion-heading {
     font-size: var(--font-size-4) !important;
