--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -590,6 +590,10 @@ html ::-webkit-scrollbar-thumb {
     }
 }
 
+//gumroad
+.gumroad .cart-button{
+  display: none !important;
+}
 
 //media queries
 
