--- a/style/main.css
+++ b/style/main.css
@@ -663,6 +663,10 @@ td.notion-collection-table__cell.status {
   object-fit: cover !important;
 }
 
+.notion-property__file a {
+  width: 100% !important;
+}
+
 .notion-pill {
   background: var(--color-link-default) !important;
   color: var(--color-cta-text) !important;
