--- a/style/main.css
+++ b/style/main.css
@@ -269,8 +269,10 @@ p, p.notion-text__content {
 .super-navbar {
   width: calc(100% - 193px) !important;
   max-width: 1480px !important;
-  height: 65px !important;
-  margin: 20px auto !important;
+  /* height: 65px !important; */
+  height: auto !important;
+  /* margin: 20px auto !important; */
+  margin: 0 auto !important;
   padding: 0px 0px !important;
   transition: box-shadow 0.2s ease-in-out !important;
   background: var(--color-bg-transparent-default) !important;
@@ -278,6 +280,7 @@ p, p.notion-text__content {
 }
 
 .super-navbar__content {
+  /* background: transparent !important; */
   padding-left: 0px !important;
 }
 
@@ -521,8 +524,15 @@ p, p.notion-text__content {
     grid-template-columns: repeat(1, 1fr) !important;
   }
 }
-.super-content {
+.notion-root {
   max-width: 1680px !important;
+  margin: 0 auto !important;
+}
+
+.super-content {
+  /* max-width: 1680px !important; */
+  max-width: 100% !important;
+  width: 1480px !important;
   margin: 0 auto !important;
   display: flex !important;
 }
@@ -536,6 +546,11 @@ p, p.notion-text__content {
 }
 
 .notion-text {
+  /* min-height: auto !important; */
+  min-height: 2em !important;
+}
+
+p.notion-text.notion-semantic-string {
   min-height: auto !important;
 }
 
@@ -695,6 +710,15 @@ td.notion-collection-table__cell.status {
   -webkit-transition: all 0.4s !important;
   transition: all 0.4s !important;
   box-shadow: none !important;
+  gap: 1rem !important;
+}
+
+.notion-collection-card picture {
+  border-radius: 10px !important;
+  flex: 0 33% !important;
+  min-height: 160px !important;
+  height: 160px !important;
+  min-width: 0px !important;
 }
 
 .notion-collection-card:hover {
@@ -829,6 +853,43 @@ td.notion-collection-table__cell.status {
   transition: 0.2s ease-in-out !important;
   background: var(--color-cta-background) !important;
   color: var(--color-cta-text) !important;
+}
+
+p.notion-text__content strong a {
+  color: var(--color-text-default) !important;
+  background: var(--color-callout-background) !important;
+  padding: 0.8rem 1.6rem !important;
+  font-family: "ClashGrotesk-Semibold", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
+  margin: 20px 0px !important;
+  text-transform: uppercase !important;
+  font-size: var(--font-size-1) !important;
+  letter-spacing: 0.05rem !important;
+  border-radius: 50px !important;
+  border: 1px solid var(--color-border-default) !important;
+  opacity: 1 !important;
+  font-weight: 500 !important;
+  display: inline-flex !important;
+  justify-content: center !important;
+  -webkit-transition: background 0.2s 0s ease-in-out !important;
+  -moz-transition: background 0.2s 0s ease-in-out !important;
+  -o-transition: background 0.2s 0s ease-in-out !important;
+  transition: background 0.2s ease-in-out !important;
+}
+
+strong .notion-link.link {
+  color: var(--color-text-default) !important;
+}
+
+p.notion-text__content strong a:hover {
+  padding-left: 2rem !important;
+  padding-right: 2rem !important;
+  transition: 0.2s ease-in-out !important;
+  background: var(--color-cta-background) !important;
+  color: var(--color-cta-text) !important;
+}
+
+.link {
+  text-decoration: none !important;
 }
 
 html ::-webkit-scrollbar {
